--- a/vignettes/ui.Rmd
+++ b/vignettes/ui.Rmd
@@ -1,5 +1,6 @@
+# HEADER
 
-#' # HEADER
+```{r }
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~  HEADER ----
@@ -26,9 +27,11 @@ header$children[[3]]$children[[4]]$children[[1]]$children[[2]]$children[[1]] <-
   HTML('<a href="#" data-toggle="control-sidebar">
        <i class="fa fa-info" role="presentation" aria-label="info icon"></i>
          </a>')
+```
 
+# SIDEBAR
 
-#' # SIDEBAR
+```{r }
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~ SIDEBAR ----
@@ -48,25 +51,29 @@ sidebar <-
                        icon = icon("sign-out-alt"))
               )
   )
+```
 
+# BODY
 
-
-#' # BODY
+```{r }
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~ BODY ----
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+```
 
+# LOAD DATA TAB
 
-
-#' # LOAD DATA TAB
+```{r }
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~ LOAD DATA TAB ----
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+```
 
+##  View merged data frame
 
-#' ##  View merged data frame
+```{r }
 # ~~~~ view_data_frame  ---------
 
 country_specific_data_to_use_section <- 
@@ -79,9 +86,11 @@ country_specific_data_to_use_section <-
                )
 
                )
+```
 
+##  View merged data frame
 
-#' ##  View merged data frame
+```{r }
 # ~~~~ view_data_frame  ---------
 
 data_completeness_and_quality <-
@@ -123,9 +132,11 @@ data_completeness_and_quality <-
                       )
                )
   )
+```
 
+##  View merged data frame
 
-#' ##  View merged data frame
+```{r }
 # ~~~~ view_data_frame  ---------
 
 
@@ -142,9 +153,11 @@ view_data_frame <-
                )
   )
   )
+```
 
+##  Combine rows for load_data_tab
 
-#' ##  Combine rows for load_data_tab
+```{r }
 # ~~~~ load_data_tab_combine_rows  --------------------
 
 
@@ -152,15 +165,19 @@ load_data_tab <- tabItem(tabName = "load_data_tab",
                          country_specific_data_to_use_section,
                          data_completeness_and_quality, 
                          view_data_frame)
+```
 
+#  MAIN TAB
 
-#' #  MAIN TAB
+```{r }
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~ MAIN TAB ----
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+```
 
+##  Date and download
 
-#' ##  Date and download
+```{r }
 # ~~~~ date_and_download  --------------------
 
 
@@ -187,8 +204,11 @@ date_and_download <-
                         )
                )
            )
+```
 
-#' ##  Additional filters
+##  Additional filters
+
+```{r }
 # ~~~~ additional_filters  --------------------
 
 additional_filters <- 
@@ -213,10 +233,11 @@ additional_filters <-
                         )
                )
   )
+```
 
+##  Value boxes
 
-
-#' ##  Value boxes
+```{r }
 # ~~~~ value_boxes  --------------------
 
 
@@ -226,10 +247,11 @@ value_boxes <-
            valueBoxOutput("contacts_under_surveillance_value_box", width = 3),
            valueBoxOutput("pct_contacts_followed_value_box", width = 3)
            )
+```
 
+##  Contacts per region
 
-
-#' ##  Contacts per region
+```{r }
 # ~~~~ contacts_per_region ----
 
 
@@ -265,9 +287,11 @@ contacts_per_region <-
   ), 
   hr()
   )
+```
 
+##  Contacts surveilled over time
 
-#' ##  Contacts surveilled over time
+```{r }
 # ~~~~ contacts_surveilled_over_time ----
 
 contacts_surveilled_over_time <-
@@ -299,8 +323,11 @@ contacts_surveilled_over_time <-
   ), 
   hr()
   )
+```
 
-#' ##  Contacts per case
+##  Contacts per case
+
+```{r }
 # ~~~~ contacts_per_case ----
 
 contacts_per_case <-
@@ -337,8 +364,11 @@ contacts_per_case <-
   ), 
   hr()
   )
+```
 
-#' ##  Contacts per link type
+##  Contacts per link type
+
+```{r }
 # ~~~~ contacts_per_link_type ----
 
 contacts_per_link_type <-
@@ -370,8 +400,11 @@ contacts_per_link_type <-
   ), 
   hr()
   )
+```
 
-#' ##  Combine rows for main tab
+##  Combine rows for main tab
+
+```{r }
 # ~~~~ main_tab_combine_rows----
 
 
@@ -386,18 +419,19 @@ main_tab <- tabItem("main_tab",
                     contacts_per_case, 
                     contacts_per_link_type
                     )
+```
 
+#  ACTIVE CONTACTS TAB
 
-
-
-
-
-#' #  ACTIVE CONTACTS TAB
+```{r }
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~ ACTIVE CONTACTS TAB ----
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+```
 
-#' ##  Active contacts bar and snake plot
+##  Active contacts bar and snake plot
+
+```{r }
 # ~~~~ active_contacts_bar_and_snake ----
 
 active_contacts_bar_and_snake <- 
@@ -450,9 +484,11 @@ active_contacts_bar_and_snake <-
     ), 
     hr()
   )
+```
 
+##  Lost contacts information
 
-#' ##  Lost contacts information
+```{r }
 # ~~~~ lost_contacts ----
 
 lost_contacts <- 
@@ -491,8 +527,11 @@ lost_contacts <-
     ), 
     hr()
   )
+```
 
-#' ##  Combine rows for active contacts tab
+##  Combine rows for active contacts tab
+
+```{r }
 # ~~~~ active contacts combine rows ----
 
 
@@ -502,9 +541,11 @@ active_contacts_tab <- tabItem(tabName = "active_contacts_tab",
                                active_contacts_bar_and_snake, 
                                lost_contacts
 )
+```
 
+#  HELP TAB
 
-#' #  HELP TAB
+```{r }
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~ HELP TAB ----
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -527,9 +568,11 @@ help_tab <- tabItem("help_tab",
                     h1("Resources", align = "center"), 
                     hr(),
                     help_tab_row_1)
+```
 
+#  COMBINE ALL TABS INTO BODY OBJECT
 
-#' #  COMBINE ALL TABS INTO BODY OBJECT
+```{r }
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~ COMBINE ALL TABS INTO BODY OBJECT ----
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -560,10 +603,11 @@ body <-
                          help_tab
                          )
   )
+```
 
+#  RIGHT SIDEBAR/CONTROLBAR
 
-
-#' #  RIGHT SIDEBAR/CONTROLBAR
+```{r }
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~ RIGHT SIDEBAR/CONTROLBAR ----
@@ -599,10 +643,11 @@ controlbar_str <-
 
 # store in controlbar object. There should be a neater way to achieve all of this
 controlbar <- eval(str2expression(controlbar_str))
+```
 
+#  FOOTER
 
-
-#' #  FOOTER
+```{r }
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~ FOOTER ----
@@ -612,9 +657,11 @@ controlbar <- eval(str2expression(controlbar_str))
 footer <-
   dashboardFooter(left = HTML('<span style="font-size: 9px; color: rgb(21, 139, 198);">World Health Organization Regional Office for Africa</span>'),
                   right = "")
+```
 
+#  BUILD FINAL UI OBJECT
 
-#' #  BUILD FINAL UI OBJECT
+```{r }
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~ BUILD FINAL UI OBJECT ----
@@ -628,5 +675,5 @@ ui <-
                 controlbar = controlbar, 
                 footer = footer
   )
-
+```
 
