--- a/vignettes/a01_global.Rmd
+++ b/vignettes/a01_global.Rmd
@@ -35,9 +35,9 @@ or the elements for connecting to, and downloading from the Go.Data instance.
 ```{r }
 PARAMS <- list()
 ## Uncomment the below to change country app version
-PARAMS$country_code <- "UGA"
+#PARAMS$country_code <- "UGA"
 #PARAMS$country_code <- "COG"
-#PARAMS$country_code <- "CIV" 
+PARAMS$country_code <- "CIV" 
 PARAMS$testing_mode <- FALSE
 PARAMS$fake_data <- TRUE
 ```
