--- a/vignettes/a03.2_server_functions_for_UGA.Rmd
+++ b/vignettes/a03.2_server_functions_for_UGA.Rmd
@@ -7,17 +7,9 @@ output:
    toc_float: yes
 --- 
 
-
-```{r echo = FALSE, message = FALSE, warning = FALSE}
-#The lines below are added to the script temporarily to make it knittable.
-
-source(here::here('global.R'))
-
-output <- list()
-
-input <- list()
-
-#
+```{r include=FALSE}
+## for knitting into documentation file
+knitr::opts_chunk$set(echo = TRUE, eval = FALSE)
 ```
 
 # UI Outputs
