--- a/markdown/report.Rmd
+++ b/markdown/report.Rmd
@@ -41,8 +41,8 @@ main-color: "#3391CF"
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE, dpi = 300, eval = TRUE)
 
-
-number_of_chunks <- 22
+# ~~~~ Progress tracker  ----
+number_of_chunks <- 20
 current_chunk <- 0
 
 update_rmd_progress <- function(){
@@ -64,6 +64,7 @@ update_rmd_progress <- function(){
   }
   
 }
+
 
 ## turn off highcharter animations
 library(highcharter)
@@ -93,12 +94,34 @@ newtheme <-
 
 options(highcharter.theme = newtheme)
 
+# 
+# ## functions for documentation
+# building_docs <-  TRUE
+# 
+# 
+# print_def <- function(function_name) {
+#   if (building_docs == TRUE) {
+#     
+#     function_def <-
+#       capture.output(function_name) %>%
+#       styler::style_text() %>% 
+#         paste(collapse = "\n")
+#     
+#     ## print
+#     cat(paste("```r", function_def, "```", sep = "\n"))
+#     
+#   }
+# }
+# 
+# options(width=9999)
+# 
 
-update_rmd_progress()
 ```
 
 
-```{css}
+
+
+```{css, echo=FALSE}
 h1 {
   text - align:center
 }
@@ -109,8 +132,10 @@ body {
 .tab - content{
   margin - bottom:70px
 }
-```
 
+## avoid wrapping (horizontal scrollbar instead)
+pre, code {white-space:pre !important; overflow-x:auto}
+```
 
 
 ```{r paramsSetNonShiny}
@@ -120,31 +145,22 @@ body {
 
 if (params$rendered_by_shiny == FALSE){
   
-
-  output <- list()
+  source(here::here("global.R"))
+  
+  ## artificial input since we're not in shiny context
   input <- list()
   
-  source(here::here("global.R"))
   source(here::here("helper_scripts/server_functions.R")) 
 
-
-  
   input$data_to_use <- "Use preloaded data"
   preloaded_data_options <-  preloaded_data_options ## defined in global file
   input$preloaded_data_choice <- "Sample tracing data"
   cols_to_exclude_from_filters <- c("placeholder_non_column")
-  input$uploaded_data_contacts_list$datapath <-
-    here::here("data/Formulaire_Identification_contact_CIV_-_latest_version_-_labels_-_2021-02-20-13-17-18.xlsx")
-  input$uploaded_data_follow_up_list$datapath <-
-    here::here("data/Formulaire_Suivi_contacts_CIV_-_latest_version_-_labels_-_2021-02-20-14-25-48.xlsx")
-  report_format <- "html (page)"
-
-  if (input$data_to_use == "Use preloaded data")   input$select_date_of_review <- as.Date("2021-04-13")
-  if (input$data_to_use == "Use uploaded data")   input$select_date_of_review <- as.Date("2021-02-20")
-  
-  todays_date <- input$select_date_of_review
+  input$select_date_of_review <- as.Date("2021-04-13")
   
       
+  report_format <- "html (page)"
+  todays_date <- input$select_date_of_review
 
 
   # ~~~~ read_file_raw ----
@@ -164,22 +180,27 @@ if (params$rendered_by_shiny == FALSE){
     read_file_filtered(contacts_df_long_transformed,
                        input$select_date_of_review)
 
+  PARAMS$documentation <-  TRUE
+
 }
   
-update_rmd_progress()
 ```
 
 
 ```{r paramsSetShiny}
-
 ## if knitting within shiny
 if (params$rendered_by_shiny == TRUE){
+  
+# ~~~~ Source functions  ----
+
   source(here::here("global.R"))
   source(here::here("helper_scripts/server_functions.R")) 
 
-contacts_df_long <- params$contacts_df_long
-todays_date <- params$todays_date
-report_format <- params$report_format
+
+  ## parameters
+  contacts_df_long <- params$contacts_df_long
+  todays_date <- params$todays_date
+  report_format <- params$report_format
 }
 
 
@@ -190,11 +211,9 @@ update_rmd_progress()
 # VALUE BOX SUMMARIES
 
 ```{r valueBoxes1, fig.width=3.5, fig.height=2, out.width="48%"}
-
-contacts_per_day_value_box(contacts_df_long,
+new_contacts_per_day_value_box(contacts_df_long,
                            todays_date,
                            report_format)
-
 
 cumulative_contacts_value_box(contacts_df_long,
                               todays_date,
@@ -226,7 +245,7 @@ update_rmd_progress()
 ## {.unlisted .unnumbered}
 
 ```{r allContactsPerAdmin1Text, results = "asis"}
-all_contacts_per_admin_1_text(contacts_df_long,
+cumul_contacts_today_text(contacts_df_long,
                                report_format)
 
 update_rmd_progress()
@@ -236,7 +255,7 @@ update_rmd_progress()
 ### Admin level 1 breakdown bar chart
 
 ```{r allContactsPerAdmin1BarChart}
-all_contacts_per_admin_1_bar_chart(contacts_df_long,
+cumul_contacts_today_bar_chart(contacts_df_long,
                                    report_format)
 
 update_rmd_progress()
@@ -245,7 +264,7 @@ update_rmd_progress()
 ### Admin level 1 breakdown sunburst plot
 
 ```{r allContactsPerAdmin1SunburstPlot}
-all_contacts_per_admin_1_sunburst_plot(contacts_df_long,
+cumul_contacts_today_sunburst_plot(contacts_df_long,
                                       report_format)
 
 update_rmd_progress()
@@ -254,7 +273,7 @@ update_rmd_progress()
 ### Admin level 1 breakdown table
 
 ```{r allContactsPerAdmin1Table}
-all_contacts_per_admin_1_table(contacts_df_long,
+cumul_contacts_today_table(contacts_df_long,
                               report_format)
 
 update_rmd_progress()
@@ -268,7 +287,7 @@ update_rmd_progress()
 ## {.unlisted .unnumbered}
 
 ```{r contactsUnderSurveillancePerAdmin1OverTimeText, results = "asis"}
-contacts_surveilled_admin_1_text(contacts_df_long,
+active_contacts_historical_text(contacts_df_long,
                                  todays_date,
                                  report_format)
 update_rmd_progress()
@@ -277,7 +296,7 @@ update_rmd_progress()
 
 ### Admin level 1 trends, absolute counts
 ```{r contactsUnderSurveillancePerAdmin1OverTimeBarChart}
-contacts_surveilled_admin_1_bar_chart(contacts_df_long,
+active_contacts_historical_bar_chart(contacts_df_long,
                                       todays_date,
                                       report_format)
 update_rmd_progress()
@@ -285,7 +304,7 @@ update_rmd_progress()
 
 ### Admin level 1 trends, relative proportions
 ```{r contactsUnderSurveillancePerAdmin1OverTimeBarChartRelative}
-contacts_surveilled_admin_1_bar_chart_relative(contacts_df_long,
+active_contacts_historical_bar_chart_relative(contacts_df_long,
                                                todays_date,
                                                report_format)
 update_rmd_progress()
@@ -379,7 +398,7 @@ active_contacts_timeline_text(contacts_df_long,
 
 ### Follow-up summary bar chart
 
-```{r activeContactsBreakdownBarChart, fig.width = 7, dpi = if(report_format %in% c("html (page)", "html (slides)")) {96} else {300} }
+```{r activeContactsBreakdownBarChart, fig.width = 7, dpi = if(params$report_format %in% c("html (page)", "html (slides)")) {96} else {300} }
 active_contacts_breakdown_bar_chart(contacts_df_long,
                            todays_date,
                            report_format,
@@ -391,7 +410,7 @@ update_rmd_progress()
 
 ### Follow-up timeline snake plot
 
-```{r activeContactsTimelineSnakePlot, fig.width = 7, dpi =  if(report_format %in% c("html (page)", "html (slides)")) {96} else {300} }
+```{r activeContactsTimelineSnakePlot, fig.width = 7, dpi =  if(params$report_format %in% c("html (page)", "html (slides)")) {96} else {300} }
 active_contacts_timeline_snake_plot(contacts_df_long,
                            todays_date,
                            report_format,
